--- a/css/cont.css
+++ b/css/cont.css
@@ -1,3 +1,8 @@
+
+body{
+	text-rendering: optimizeLegibility;
+}
+
 #contul_meu_1{
 	font-size:25px;
 
@@ -10,5 +15,9 @@
 
 .comenzi_cont:hover{
      opacity: 0.75;
-    
+    }
+
+#test{
+	color:red;
 }
+
